--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0022)https://weixin.qq.com/ -->
+<!-- saved from url=(0022)https://cucumber.hg.com/ -->
 <html>
 	<head>
 		<link rel="shortcut icon" type="image/x-icon" href="./powerG.ico">
@@ -41,10 +41,10 @@
 								class="banner__download-item banner__download-item_windows"
 								href="sheet/" target="_blank"> <i class="icon-windows"></i>
 								<span>Sheet</span> </a> <a class="banner__download-item banner__download-item_macos"
-								href="https://mac.weixin.qq.com/?t=mac&amp;lang=zh_CN" target="_blank"> <i
+								href="https://mac.cucumber.hg.com/?t=mac&amp;lang=zh_CN" target="_blank"> <i
 									class="icon-macos"></i> <span>More</span> </a> <a
 								class="banner__download-item banner__download-item_macos"
-								href="https://filehelper.weixin.qq.com/" target="_blank"> <i class="icon-transfer"></i>
+								href="https://filehelper.cucumber.hg.com/" target="_blank"> <i class="icon-transfer"></i>
 								<span>More</span> </a> </div>
 						
 						</div>
