--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 								id="android_download" href="paper/read.html">
 								<i class="icon-android"></i> <span>Paper</span> </a><a
 								class="banner__download-item banner__download-item_windows"
-								href="sheet/" target="_blank"> <i class="icon-windows"></i>
-								<span>Sheet</span> </a> <a class="banner__download-item banner__download-item_macos"
+								href="vhw/" target="_blank"> <i class="icon-windows"></i>
+								<span>Virtual HardWare</span> </a> <a class="banner__download-item banner__download-item_macos"
 								href="https://mac.cucumber.hg.com/?t=mac&amp;lang=zh_CN" target="_blank"> <i
 									class="icon-macos"></i> <span>More</span> </a> <a
 								class="banner__download-item banner__download-item_macos"
