--- a/vhw/demo/demo.html
+++ b/vhw/demo/demo.html
@@ -45,9 +45,9 @@
                 <div class="endpoint point window node" style="left: 150px; top:350px" data-nodetype="endpoint" id="endpoint">End</div> -->
 				</div>
 			</div>
-			<div class='right'>
+			<div class='right' onclick="">
 				<h3 class='proc-name'></h3>
-				<p class='proc-desc'></p>
+				<p class='proc-desc' onclick="if($(this.parentElement.children[0]).text()=='Notes'&&$(this).html().indexOf('<input')==-1)NoteEdit(this)"></p>
 				<!-- <button class='btn-del'>删除</button> -->
 			</div>
 		</div>
@@ -67,7 +67,7 @@
 		</div>
 		<div
 			style="position: absolute;left: calc(100vw - 20px);top: calc(100vh - 20px);display: block;max-width: 15px;max-height: 15px;"
-			onclick="DEBUG_state=(DEBUG_state=='on'?'off':'on');$('#debug_svg').children('path').css('fill',(DEBUG_state=='on'?'green':'black'))">
+			class="debg" onclick="DEBUG_state=(DEBUG_state=='on'?'off':'on');$('#debug_svg').children('path').css('fill',(DEBUG_state=='on'?'green':'black'))">
 			<svg id='debug_svg' viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" width="15px" height="15px">
 				<path
 					d="M1022.07 583.40c0 11.06-4.03 20.62-12.11 28.70-8.08 8.08-17.64 12.12-28.69 12.12L838.45 624.22c0 72.69-14.24 134.32-42.72 184.90l132.62 133.26c8.08 8.07 12.12 17.63 12.12 28.69 0 11.05-4.03 20.61-12.12 28.69-7.65 8.07-17.21 12.11-28.69 12.11-11.48 0-21.04-4.04-28.69-12.11L744.72 874.15c-2.12 2.12-5.31 4.88-9.56 8.28-4.26 3.40-13.18 9.46-26.79 18.17-13.60 8.72-27.42 16.47-41.44 23.28-14.03 6.80-31.46 12.97-52.29 18.49-20.83 5.52-41.45 8.29-61.84 8.29L552.80 379.39l-81.61 0 0 571.28c-21.67 0-43.25-2.87-64.71-8.62-21.47-5.73-39.96-12.75-55.48-21.04-15.52-8.29-29.54-16.57-42.08-24.87-12.54-8.29-21.78-15.19-27.74-20.71l-9.56-8.93L154.95 998.48c-8.50 8.92-18.70 13.39-30.61 13.39-10.20 0-19.34-3.40-27.41-10.20-8.08-7.65-12.44-17.11-13.08-28.37-0.63-11.26 2.66-21.14 9.89-29.65l128.79-144.73c-24.65-48.46-36.98-106.70-36.98-174.71L42.74 624.21c-11.06 0-20.62-4.04-28.69-12.11-8.08-8.08-12.12-17.64-12.12-28.70 0-11.05 4.04-20.62 12.12-28.69 8.07-8.07 17.63-12.11 28.69-12.11l142.81 0L185.55 355.16l-110.30-110.30c-8.07-8.08-12.11-17.64-12.11-28.69 0-11.05 4.04-20.62 12.11-28.69 8.07-8.08 17.64-12.12 28.69-12.12 11.06 0 20.61 4.05 28.69 12.12l110.30 110.30 538.13 0 110.30-110.30c8.07-8.08 17.63-12.12 28.69-12.12 11.05 0 20.62 4.05 28.69 12.12 8.08 8.07 12.12 17.64 12.12 28.69 0 11.05-4.04 20.61-12.12 28.69l-110.30 110.30 0 187.45 142.82 0c11.06 0 20.62 4.03 28.69 12.11 8.08 8.07 12.12 17.64 12.12 28.68l0 0L1022.07 583.40 1022.07 583.40zM716.02 216.16 307.97 216.16c0-56.53 19.87-104.67 59.62-144.41 39.73-39.75 87.88-59.61 144.41-59.61 56.53 0 104.68 19.87 144.41 59.61C696.16 111.49 716.02 159.63 716.02 216.16L716.02 216.16 716.02 216.16 716.02 216.16z"
@@ -81,11 +81,13 @@
 				$(".right").css("display", "none");
 				$(".left").css("display", "none");
 				$(".btns").css("display", "none");
+				$(".debg").css("display", "none");
 				$(".footer").css("display", "block");
 				window.print();
 				$(".right").css("display", "block");
 				$(".left").css("display", "block");
 				$(".btns").css("display", "block");
+				$(".debg").css("display", "block");
 				$(".footer").css("display", "none");
 			}
 		</script>
